# agentvrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  config.toml.example
.github/workflows/: ci.yml  release.yml
src/: db.rs  lib.rs  main.rs  runner.rs
src/a2a/: bridge.rs  client.rs  mod.rs  types.rs
src/agent/: message.rs  mod.rs  registry.rs  types.rs
src/api/: mod.rs  observability.rs  routes.rs  server.rs  types.rs
src/assets/: agentverse.icns
src/avatar/: agents.rs  floors.rs  furniture.rs  mod.rs  palette.rs  sprite.rs
src/bevy3d/: agents.rs  bridge.rs  camera.rs  interaction.rs  lighting.rs  materials.rs  meshes.rs  mission_control.rs  mod.rs  overlay.rs  runner.rs  sim_system.rs  sync.rs
src/config/: types.rs
src/error/: mod.rs
src/gui/: agent_render.rs  app.rs  input.rs  iso.rs  mod.rs  runner.rs  sidebar.rs  status_bar.rs  tile_render.rs  types.rs  window.rs  world_view.rs
src/tests/: a2a_test.rs  agent_test.rs  api_test.rs  avatar_test.rs  config_test.rs  db_test.rs  mission_control_test.rs  mod.rs  observability_test.rs  simulation_test.rs  tui_test.rs  world_test.rs
src/tui/: app.rs  events.rs  input.rs  mod.rs  runner.rs
src/tui/render/: details_panel.rs  message_log.rs  mission_control.rs  mod.rs  sidebar.rs  status_bar.rs  world_view.rs
src/world/: events.rs  grid.rs  mod.rs  pathfind.rs  position.rs  simulation.rs
src/world/grid/: layout.rs  mod.rs  tiles.rs
