[package]
name = "agentverse"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
authors = ["Adolfo Usier <adolfo@meetneura.ai>"]
license = "MIT"
description = "Shared world where AI agents connect, message each other, delegate tasks, and interact — all via REST API. TUI + GTK4 GUI."
repository = "https://github.com/adolfousier/agentvrs"
keywords = ["ai", "agents", "terminal", "a2a", "tui"]
categories = ["command-line-utilities"]

[features]
default = []
gui = ["gtk4"]

[dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# TUI
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# GUI (optional)
gtk4 = { version = "0.10", optional = true }

# HTTP (client for A2A, server for external agents)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[dev-dependencies]
rstest = "0.25"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
mockito = "1.7"
tempfile = "3.25"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[[bin]]
name = "agentverse"
path = "src/main.rs"

