[package]
name = "agentverse"
version = "0.1.5"
edition = "2024"
rust-version = "1.94"
authors = ["Adolfo Usier <adolfo@meetneura.ai>"]
license = "MIT"
description = "Isometric 3D world where AI agents connect, collaborate, and interact in real-time — all via REST API. Built for teams, built in Rust with Bevy."
repository = "https://github.com/adolfousier/agentverse"
keywords = ["ai", "agents", "bevy", "a2a", "tui"]
categories = ["command-line-utilities"]

[features]
default = ["bevy3d"]
bevy3d = ["dep:bevy"]

[dependencies]
# Async Runtime
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# TUI
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# 3D GUI (optional)
bevy = { version = "0.18", optional = true, default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_picking",
    "x11",
    "wayland",
    "tonemapping_luts",
    "default_font",
    "zstd_rust",
    "bevy_log",
] }

# HTTP (client for A2A, server for external agents)
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
axum = "0.8"
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence
rusqlite = { version = "0.34", features = ["bundled"] }

# Utilities
uuid = { version = "1.22", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"

[dev-dependencies]
rstest = "0.26"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
mockito = "1.7"
tempfile = "3.27"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[[bin]]
name = "agentverse"
path = "src/main.rs"

